--- a/about.html
+++ b/about.html
@@ -208,7 +208,7 @@
 							2018 - <a id=show target="_blank" href="https://www.eventbrite.com/e/creative-machine-2-pv-tickets-51113585109">The Creative Machine 2 (Cyland & Goldsmiths)</a>, Hatcham Church Gallery, Goldsmiths University of London <br>
 							2018 - <a id=show target="_blank" href="http://andwhatfest.com/digital-bodies">Digital Bodies</a>, <a id=show target="_blank" href="http://andwhatfest.com/">'and what?' - Queer Arts Festival 2018</a>, Candid Arts Trust, London <br>
 							2018 - <a id=show target="_blank" href="https://loop-barcelona.com/city-screen/">City Screen, Loop Barcelona 2018</a>, Barcelona <br>
-							2018 - <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Isreal <br>
+							2018 - <a id=show target="_blank" href="https://www.printscreenfestival.com/">Print Screen Festival</a>, Holon, Israel <br>
 							2018 - <a id=show target="_blank" href="https://www.vam.ac.uk/event/6YVLW34q/digital-design-weekend-2018-ldf"> Digital Design Weekend</a>, Victoria and Albert Museum, London, UK<br>
 							2018 - <a id=show target="_blank" href="https://brightondigitalfestival.co.uk/events/lumen-prize-exhibition"> Uncommon Natures (Lumen Art Prize)</a>, Brighton Digital Festival, Phoenix Theatre, Brighton, UK<br>
 							2018 - <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> Gradient Descent</a>, Nature Morte, Delhi, India<br>
