--- a/about.html
+++ b/about.html
@@ -348,9 +348,9 @@
 							<h4>Interviews</h4>
 							<p>
 								<a id=show target="_blank" href="/interviews/Artsy.pdf">Artsy, Sam Gaskin, 2018. (PDF)</a> <br>
-								<a id=show target="_blank" href="/interviews/FastCompany.pdf">New York Times, Gabe Cohn, 2018. (PDF)</a> <br>
+								<a id=show target="_blank" href="/interviews/NYTimes.pdf">New York Times, Gabe Cohn, 2018. (PDF)</a> <br>
 								<a id=show target="_blank" href="https://globalnews.ca/video/4601432/painting-by-a-i-robot-sells-for-432500-usd-at-auction">Global News Canada, 2018. (video) </a> <br>
-								<a id=show target="_blank" href="/interviews/NYTimes.pdf">Fast Company, DJ Pangburn, 2018. (PDF)</a> <br>
+								<a id=show target="_blank" href="/interviews/FastCompany.pdf">Fast Company, DJ Pangburn, 2018. (PDF)</a> <br>
 								<a id=show target="_blank" href="https://www.arthurimiller.com/">Arthur I. Miller</a>, book in progress. <br>
 								Francesca Gavin article, Financial Times (in progress). <br>
 
