--- a/index.html
+++ b/index.html
@@ -147,10 +147,23 @@
 	</section><!-- // section#header -->
 
 
-	<!-- Works (Three Columns)
-	================================================== -->
+
+
 	<section id="works" class="">
 		<div class="container">
+
+<!--
+			<a href="project-cusp.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>CUSP</h3>
+						<span class="category">2017</span>
+					</div>
+				</div>
+			</a> -->
+
 
 			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
