--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -92,8 +92,12 @@
 
 							“The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br><br>
 
-							Closed Loop has had no textual or visual input by the artist. <br>
+							Closed Loop has had no textual or visual input by the artist. <br><br>
 
+							<h3 class="border-top">Technical</h3>
+							<small>Two neural networks: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.
+							Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.</small>
+							<br>
 					<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
 					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
 					The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” -->
