--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
 	<section id="works" class="">
 		<div class="container">
 
-<!--
+
 			<a href="project-cusp.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
 						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>CUSP</h3>
-						<span class="category">2017</span>
+						<h3>CUSP (work in progress)</h3>
+						<span class="category">2019</span>
 					</div>
 				</div>
-			</a> -->
+			</a>
 
 
 			<a href="project-latentSpace.html" class="permalink">
@@ -188,6 +188,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 			<a href="project-DaDaTa.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -201,7 +203,6 @@
 
 
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-digitalWhisper.html" class="permalink">
@@ -227,6 +228,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+
 			<a href="project-MLPorn.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -237,9 +241,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
 
 
 
@@ -266,6 +267,9 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
+
 			<a href="project-iPhoneTouch.html" class="permalink">
 		<div class="desktop-4 tablet-6 columns">
 			<div class="item">
@@ -277,9 +281,6 @@
 		</div><!-- // .desktop-4 -->
 	</a>
 
-
-
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-pornCircles.html" class="permalink">
