--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 					<div class="item">
 						<img src="images/project-cusp.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>CUSP (work in progress)</h3>
+						<h3>CUSP</h3>
 						<span class="category">2019</span>
 					</div>
 				</div>
