--- a/project-cusp.html
+++ b/project-cusp.html
@@ -121,7 +121,7 @@
 
 			<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-			<iframe id="vid" src="https://player.vimeo.com/video/324652119?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe id="vid" src="https://player.vimeo.com/video/324652119?color=ffffff&loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 			<script>
 				function resizeDivs() {
