--- a/news.html
+++ b/news.html
@@ -150,6 +150,129 @@
             </p> -->
 
 						<blockquote>
+							<p class="quote" style="margin-top:0px;">Fundación Telefónica | Madrid</p>
+							<footer>June 2019</footer>
+						</blockquote>
+						<img src="images/news/Madrid1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid2.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid4.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+
+
+						<p>
+
+							I was invited to give a talk about the field of AI + Art, explaining the technologies involved and showing work engaging with the subject.
+							<br>
+							<br>
+							Taking place at Espacio Fundación Telefónica, Madrid and organised by ADA and the Telefonica Foundation.
+							<br>
+							<br>
+							“This event will explore the role of AI in art with contributions from an artist working with AI, a patron promoting AI artists in order to bring them to the attention of collectors and institutions around the world and a lawyer specialising in intellectual property law who will address the copyright considerations.
+						<br>
+						<br>
+						</p>
+
+
+						<blockquote>
+							<p class="quote" style="margin-top:0px;">ZKM | Talk and Collection</p>
+							<footer>May 2019</footer>
+						</blockquote>
+						<img src="images/news/ZKM1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/ZKM2.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/ZKM3.jpg" width="37.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/ZKM4.jpg" width="50%" alt="Jake Elwes digital artist" />
+
+						<p>
+
+							I’m delighted that my work Closed Loop 2017 has joined the permanent collection at the ZKM | Center for Art and Media, Karlsruhe, Germany.
+							<br>
+							<br>
+							"In an extraordinary compilation, ZKM presents the main works from its globally unique collection. The collection of the ZKM | Karlsruhe ranks among the largest media art collections in the world. It exemplifies the transformation of art in the face of changing technologies of production, reception, and distribution. Artists react to changes in media  and sometimes anticipate developments that only years later will be taken for granted by society as a whole: they write the history of the future.
+							<br>
+							<br>
+							»Writing the History of the Future. Part I« looks at art from the middle of the 20th century onwards. The exhibition shows aesthetic experiments with script and language that engage with different media. It presents the first attempts at computer-generated graphics and poetry as well as contemporary works dedicated to the automation of the creative act. It also addresses the material conditions of individual and cultural memory – between erasing and forgetting, storing and remembering.
+							<br>
+							<br>
+							I was also invited to give a talk as part of the Open Conference Kunst und Künstliche Intelligenz (Open Codes exhibition program).
+							<br>
+							<br>
+							“The invited scientists and developers will deal with the technical aspects of automated methods of creativity, cognition and problem solving. Practical experiences with new technologies will be exchanged in the context of a workshop. The speakers will present their projects and talk about production pragmatics and their reflections on working with AI. The program will be rounded off by audiovisual performances produced with machine learning tools.
+
+						<br>
+						<br>
+						</p>
+
+
+
+
+						<blockquote>
+							<p class="quote" style="margin-top:0px;">Venice Biennale | CYFEST-12</p>
+							<footer>May 2019</footer>
+						</blockquote>
+						<img src="images/news/Venice1.jpg" width="49%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Venice2.jpg" width="44%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Venice3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Venice4.jpg" width="28%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Venice5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+
+
+						<p>
+
+							My work CUSP 2019 was showing as part of CYFEST which opened as an off site exhibition during the Venice Biennale.
+							<br>
+							<br>
+							“CYLAND MediaArtLab in collaboration with Centre of Studies of Russian Art CSAR presents the exhibition ID. ART:TECH. 
+							<br>
+							<br>
+							ID. ART:TECH EXHIBITION is dedicated to the ID as a phenomenon with wide scatter of meanings – from the term in psychoanalysis (id) to the document that certifies one’s identity (ID). We are interested in what ID represents in the world of people and things, what new meanings come to life when they interact and what this leads to.
+							<br>
+							<br>
+							From May 10 to June 28, 2019, in the space Ca’ Foscari Zattere Cultural Flow Zone, there will be a show of works by the contemporary authors from Russia, Italy, Great Britain, USA, Belgium, France, Norway as well as artworks by the classics of the 20th century. Among the exhibit’s participants are the New York underground guru of sound art and renowned minimalist composer Phill Niblock, Russian artist Andrey Bartenev, artist and curator of the Central Asia Pavilion at the 55 th Venetian Biennale Ayatgali Tuleubek, St. Petersburg artist, curator, winner of Sergei Kuryokhin Award and Innovation Prize Peter Belyi, distinguished Russian artist and founder of sots art Erik Bulatov and others.
+							<br>
+							The project’s exposition is a visual examination of the subject of identification: from the forms of sociopolitical functioning of portraits of Soviet non-conformism to the images of mass culture, aesthetics of ID cards, passport picture and social networks.
+
+						<br>
+						<br>
+						</p>
+
+
+
+
+						<blockquote>
+							<p class="quote" style="margin-top:0px;">Zabludowicz Invites</p>
+							<footer>March 2019</footer>
+						</blockquote>
+						<img src="images/news/zabs1.jpg" width="51%" alt="Jake Elwes digital artist" />
+						<img src="images/news/zabs2.jpg" width="45.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/zabs3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<img src="images/news/zabs4.jpg" width="44%" alt="Jake Elwes digital artist" />
+
+
+						<p>
+
+							I was invited to create a new work for a show at the Zabludowicz collection as part of their Invites program. I showed a new work CUSP.
+							<br>
+							<br>
+“Zabludowicz Collection is a philanthropic organisation including a growing collection of contemporary art and a programme of international exhibitions, events and artists’ residencies.
+<br>
+<br>
+Founded in 1994, the Collection is dedicated to fostering new audiences and a sustainable environment for contemporary art, offering a variety of opportunities and support for artists and art organisations. All of its activities are privately funded and free for the public to access.
+The collection contains over 3000 works of art by more than 600 artists, spanning 40 years of art production. Its focus is on emerging art from the late 20th century to the present day and it is in constant development. The Collection has been directed since 2006 by Elizabeth Neilson.
+<br>
+<br>
+In 2007 the Collection opened its main exhibition space in London, in a 19th Century former Methodist Chapel, where it has worked with artists, curators and the collection to produce exhibitions and events examining contemporary art practice in a public forum. The Collection now also runs an international programme of exhibitions, events, residencies and commissions across four permanent venues in the UK, USA and Finland. The programme is directed by Maitreyi Maheshwari. 
+
+						<br>
+						<br>
+						</p>
+
+
+
+
+
+
+						<blockquote>
 							<p class="quote" style="margin-top:0px;">Gradient Descent, Nature Morte, Dehli</p>
 							<footer>August 2018</footer>
 						</blockquote>
@@ -164,7 +287,9 @@
 
 
 						<p> I had the pleasure of exhibiting in a group show at one of India's foremost contemporary art galleries - <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> Nature Morte</a> in Dehli. The show featured works created entirely by Artificial Intelligence in collaboration with seven international artists: <a id=show target="_blank" href="http://harshitagrawal.com/"> Harshit Agrawal, </a><a id=show target="_blank" href="http://www.memo.tv/"> Memo Akten, Jake Elwes, </a><a id=show target="_blank" href="http://quasimondo.com/"> Mario Klingemann, </a><a id=show target="_blank" href="http://annaridler.com/"> Anna Ridler, </a><a id=show target="_blank" href="http://naotokui.net/"> Nao Tokui, and </a><a id=show target="_blank" href="https://www.victoria.ac.nz/design/about/staff/tom-white"> Tom White.</a> <br>
-<a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/">‘Gradient Descent’</a> was curated by <a id=show target="_blank" href="https://www.64bar1.com/"> 64/1</a>, an art curation and research collective focused on building public understanding of how artists and artificial intelligence can come together to create art for the post-human age. 64/1 was founded by Raghava KK and Karthik Kalyanaraman out of Bangalore, India. <br>
+<a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/">‘Gradient Descent’</a> was curated by <a id=show target="_blank" href="https://www.64bar1.com/"> 64/1</a>, an art curation and research collective focused on building public understanding of how artists and artificial intelligence can come together to create art for the post-human age. 64/1 was founded by Raghava KK and Karthik Kalyanaraman out of Bangalore, India.
+<br>
+<br>
 I had an wonderful week meeting Indian politicians, officials, artists and academics. I spoke on a panel about my art process and collaborating with a machine at an INK talk (Indian equivalent of TED). It was such a pleasure to be invited out by Raghava and Karthik having discussions with them and the other artists about our inspirations and the future. <br><br>
 Press: <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-generated-art-gallery-show-1339445"> Artnet, </a><a id=show target="_blank" href="https://www.google.co.uk/search?ei=QPGYW9aaD-yagAa824roDQ&q=site%3Aft.com+An+AI+genre+in+its+infancy+questions+the+nature+of+art">Financial Times, </a><a id=show target="_blank" href="https://www.vogue.in/content/is-artificial-intelligence-the-new-artist-we-need-to-watch-out-for/">Vogue India, </a><a id=show target="_blank" href="http://www.forbesindia.com/aperture/slideshow/artificial-intelligence-art-parenting-a-new-genre/51059/1">Forbes India, </a><a id=show target="_blank" href="https://www.thehindu.com/entertainment/art/the-poetics-of-metonymy/article24769019.ece">The Hindu, </a><a id=show target="_blank" href="https://www.fastcompany.com/90233582/ai-is-their-paintbrush-but-the-artwork-is-no-less-human">Fastcompany</a>
 <br><br>
@@ -184,9 +309,16 @@ Press: <a id=show target="_blank" href="https://news.artnet.com/exhibitions/ai-g
 						<img src="images/news/BNC5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
 
 
-            <p> Jake has been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.<br>
-              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean have all been selected.<br>
+            <p> Jake has been selected to show work at this years <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes">New Contempories</a>. "New Contemporaries is the leading organisation supporting emergent art practice from UK art schools. Since 1949 New Contemporaries has consistently provided a critical platform for new and recent fine art graduates primarily by means of an annual, nationally touring exhibition.
+							<br>
+							<br>
+              Showcasing new and recent fine art graduates since 1949, the roster of alumni encompasses artists such as Frank Auerbach, Paula Rego, David Hockney, Damien Hirst, Tacita Dean, Mark Lecky, Ed Atkins, Marvin Gaye Chetwynd and Rachel Maclean have all been selected.
+							<br>
+							<br>
 For the first time the national touring exhibition will launch at BALTIC Centre for Contemporary Art, Gateshead and BALTIC’s project space at BALTIC 39, Newcastle upon Tyne from 29 September to 26 November 2017. The exhibition will then travel to Block 336, London, from 27 January to 3 March 2018." - <a id=show href="http://www.newcontemporaries.org.uk/">newcontempories.com</a></p>
+
+
+
 
 						<blockquote>
 							<p class="quote">Ars Electronica Festival</p>
@@ -200,7 +332,13 @@ For the first time the national touring exhibition will launch at BALTIC Centre 
 
 						<p> <a id=show href="https://www.aec.at/festival/en/"> Ars Electronica</a>'s theme for 2017 in Artificial Intelligence, Elwes was invited to show four pieces as part of the festival, <a id=show href="https://www.aec.at/ai/en/latent-space/">Latent Space</a>, <a id=show href="https://www.aec.at/ai/en/closed-loop/">Closed Loop</a> and <a id=show href="https://www.aec.at/ai/en/machine-learning-porn/">Machine Learning Porn</a> at this years Ars Electronica Fetival in Linz, Austria.
               Jake is also going to give a talk and is showing <a id=show href="project-DaDaTa.html">Dadada Ta</a> with the Artist Development Agency.
-<br> "Art, technology, society. Since 1979, Ars Electronica has sought out interlinkages and congruities, causes and effects. The ideas circulating here are innovative, radical, eccentric in the best sense of that term. They influence our everyday life—our lifestyle, our way of life, every single day.<br>Once a year, Ars Electronica invites artists, scientists and researchers from all over the world to a conclave in Linz to confront a specific, interdisciplinary theme in the context of speeches, workshops, exhibitions and symposia."
+<br>
+<br>
+ "Art, technology, society. Since 1979, Ars Electronica has sought out interlinkages and congruities, causes and effects. The ideas circulating here are innovative, radical, eccentric in the best sense of that term. They influence our everyday life—our lifestyle, our way of life, every single day.
+ <br>
+ <br>
+
+ Once a year, Ars Electronica invites artists, scientists and researchers from all over the world to a conclave in Linz to confront a specific, interdisciplinary theme in the context of speeches, workshops, exhibitions and symposia."
             </p>
 
 
