--- a/news.html
+++ b/news.html
@@ -158,11 +158,12 @@
 						<img src="images/news/Madrid3.jpg" width="31.5%" alt="Jake Elwes digital artist" />
 						<img src="images/news/Madrid4.jpg" width="31.5%" alt="Jake Elwes digital artist" />
 						<img src="images/news/Madrid5.jpg" width="31.5%" alt="Jake Elwes digital artist" />
+						<small>Photo Irene Medina. Fundación Telefónica</small>
 
 
 						<p>
 
-							I was invited to give a talk about the field of AI + Art, explaining the technologies involved and showing work engaging with the subject.
+							I was invited to give a talk about the field of AI + Art, explaining the technologies involved and showing work engaging with the subject. <a id=show target="_blank" href="https://www.youtube.com/watch?v=1VuBBwuyHX8  ">Watch here</a>
 							<br>
 							<br>
 							Taking place at Espacio Fundación Telefónica, Madrid and organised by ADA and the Telefonica Foundation.
