--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -105,16 +105,16 @@
 				<br><br>
 
 				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
-				<embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%" height="400px" type='application/pdf'>
+				<!-- <embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%" height="400px" type='application/pdf'> -->
 
-
+<!--
 					<script>
 						function resizeDivs() {
 							$('#pdf').css("height", $('#pdf').width()*0.7);
 						}
 						$(resizeDivs);
 						$(window).resize(resizeDivs);
-					</script>
+					</script> -->
 
 					<!-- <iframe id="pdf" src="https://cdn.flipsnack.com/widget/flipsnackwidget.html?hash=fdh52mpze&bgcolor=EEEEEE&t=1483891832" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
 
