--- a/news.html
+++ b/news.html
@@ -166,12 +166,16 @@
 							I was invited to give a talk about the field of AI + Art, explaining the technologies involved and showing work engaging with the subject. <a id=show target="_blank" href="https://www.youtube.com/watch?v=1VuBBwuyHX8  ">Watch here</a>
 							<br>
 							<br>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/1VuBBwuyHX8?start=221" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<br>
+							<br>
 							Taking place at Espacio Fundación Telefónica, Madrid and organised by ADA and the Telefonica Foundation.
 							<br>
 							<br>
 							“This event will explore the role of AI in art with contributions from an artist working with AI, a patron promoting AI artists in order to bring them to the attention of collectors and institutions around the world and a lawyer specialising in intellectual property law who will address the copyright considerations.
-						<br>
-						<br>
+							<br>
+							<br>
+
 						</p>
 
 
