--- a/index.html
+++ b/index.html
@@ -152,6 +152,17 @@
 	<section id="works" class="">
 		<div class="container">
 
+			<!-- <a href="project-cusp.html" class="permalink"> -->
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Zizi (work in progress)</h3>
+						<span class="category">2019 -</span>
+					</div>
+				</div>
+			<!-- </a> -->
+
 
 			<a href="project-cusp.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -176,6 +187,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-closedLoop.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -188,7 +201,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-DaDaTa.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -216,6 +228,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-AutoEncodedBuddha.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -228,7 +242,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-MLPorn.html" class="permalink">
@@ -254,6 +267,7 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-circuit.html" class="permalink">
@@ -267,7 +281,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-iPhoneTouch.html" class="permalink">
