--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<div class="item">
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
-						<h3>Zizi (work in progress)</h3>
+						<h3>Zizi (work in progress - <a id=show target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a>)</h3>
 						<span class="category">2019 -</span>
 					</div>
 				</div>
