--- a/about.html
+++ b/about.html
@@ -201,7 +201,7 @@
 							<br>
 						</p>
 
-							<h4>Group Shows</h4>
+							<h4>Selected Group Shows</h4>
 							<p>
 							2019 - <a id=show target="_blank" href="https://computer-arts-society.com/event-two">Event Two,</a>, (50th anniversary of the landmark Computer Arts Society <a id=show target="_blank" href="https://computer-arts-society.com/event-one">Event One</a>) - curated by Flux, RCA, Lumen & EVA, Royal College of Art, London<br>
 							2019 - <a id=show target="_blank" href="http://cyland.org/lab/cyfest-12-continues-in-venice-italy/">ID. ART:TECH | CYFEST-12</a> (11.05-28.06 during Venice Biennale), Ca’ Foscari Zattere, Venice, Italy<br>
