--- a/project-cusp.html
+++ b/project-cusp.html
@@ -132,6 +132,9 @@
 				$(window).resize(resizeDivs);
 			</script>
 
+	<!-- LIVE PERFORMANCE -->
+
+
 
 					<!-- <img src="images/project-cusp/1.jpg" alt="CUSP 2019 - Jake Elwes digital artist" /> -->
 					<small>CUSP 2019 - Film Extract</small><br>
@@ -143,15 +146,30 @@
 					<img src="images/project-cusp/4.jpg" style="width:57%; padding:1%" alt="CUSP 2019 - Jake Elwes digital artist" /> -->
 
 
-					<img src="images/project-cusp/3.jpg" style="width:44%; padding:1%" alt="CUSP 2019 - Jake Elwes digital artist" />
-					<img src="images/project-cusp/5.jpg" style="width:50%; padding:1%" alt="CUSP 2019 - Jake Elwes digital artist" />
+					<img src="images/project-cusp/3.jpg" style="width:46%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+					<img src="images/project-cusp/5.jpg" style="width:52%;" alt="CUSP 2019 - Jake Elwes digital artist" />
 					<small>Four stills of generated birds  /  On Location in the Essex marshes</small>
+
+					<br><br>
+
+					<iframe id="vid2" src="https://player.vimeo.com/video/351045765?color=ffffff&loop=1&title=0&byline=0&portrait=0" width="260" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
+					<!-- <script>
+						function resizeDivs() {
+							$('#vid2').css("height", $('#vid').width()/1.1);
+
+						}
+						$(resizeDivs);
+						$(window).resize(resizeDivs);
+					</script> -->
+					<br><small>CUSP accompanying live performance, Zabludowicz 2019</small>
+
 
 					<div align="left">
 					<small>
 
 
-													<br><br><br><h1>Acknowledgements:</h1>
+													<br><br><h1>Acknowledgements:</h1>
 													<hr><h1>Camera:</h1> Toby Elwes<br>
 
 													<h1>Machine learning models:</h1>
