--- a/project-cusp.html
+++ b/project-cusp.html
@@ -98,7 +98,10 @@
 
 								Birds have been actively selected from among the images conceived by the neural network, and then combined into a single animation that migrates from bird to bird, accompanied by a soundscape of artificially generated bird song. The final work records these generated forms as they are projected, using a portable perspex screen, across the mudflats in Landermere Creek. The work both augments and disrupts the natural ecology of the location, as flocks of native birds enter a visual dialogue with these artificial ones.<br><br>
 
-								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.</small>
+
+
+								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.</small><br><br>
+								<a id=show target="_blank" href="https://vimeo.com/351045765">Watch on Vimeo - live audio visual performance, collaboration with Cameron Thomas, Zabludowicz 2019</a>
 
 
 						</div><!-- // .box-info -->
@@ -152,7 +155,7 @@
 
 					<br><br>
 
-					<iframe id="vid2" src="https://player.vimeo.com/video/351045765?color=ffffff&loop=1&title=0&byline=0&portrait=0" width="260" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+					<!-- <iframe id="vid2" src="https://player.vimeo.com/video/351045765?color=ffffff&loop=1&title=0&byline=0&portrait=0" width="260" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> -->
 
 					<!-- <script>
 						function resizeDivs() {
@@ -162,7 +165,6 @@
 						$(resizeDivs);
 						$(window).resize(resizeDivs);
 					</script> -->
-					<br><small>CUSP accompanying live performance, Zabludowicz 2019</small>
 
 
 					<div align="left">
