--- a/project-circuit.html
+++ b/project-circuit.html
@@ -81,7 +81,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Solid State</h3>
-							<p class="project-desc">2015, Relief &amp; Intaglio Prints, 30x40cm
+							<p class="project-desc">2015, series of 14, relief &amp; intaglio prints, 30x40cm
 </p>
 <p>
 Relief &amp; Intaglio prints made directly from circuit board surfaces. The circuit boards were prepared by burning to remove components then run through a printing press.
