--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -84,7 +84,7 @@
 							<p class="project-desc">2016, Digital Video, 20 minute loop
 </p>
 
-							<p>In 'dada da ta' over 50 hours of interviews have been sourced from YouTube then processed using the IBM Watson AI speech to text programme to transcribe the interviews and a custom-made computer programme to extract in time order the instances of the participants speaking in numbers and then remove the words from the source videos – leaving the interview’s chronology intact yet reduced to a stream of numbers: <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
+							<p>In 'dada da ta' over 50 hours of video interviews have been transcribed using the IBM Watson AI speech to text programme. A custom-made computer programme then identified the instances when the participants spoke using numbers. It then abstracts these words from the source videos, leaving the interview’s chronology intact yet reduced to a stream of numbers:  <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
 </p>
 						</div><!-- // .box-info -->
 
