--- a/about.html
+++ b/about.html
@@ -305,7 +305,9 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Conferences / Workshops</h4> <br>
 							<b>2019</b><br>
-							&bull; talk & discussion - 13th Academy Discussion [and …]: AI versus Art? - 18 Sept 2019, Akademie der Künste, Berlin<br>
+							&bull; panel & talk - <a id=show target="_blank" href="https://www.adk.de/en/programme/index.htm?we_objectID=60143"> 13th Academy Discussion [and …]: AI versus Art? - 18 Sept 2019</a>, Akademie der Künste, Berlin<br>
+							&bull; panel & talk - Digital futures, materiality and added value: When data is a medium for artistic expression, what is the future value of the material artefact, Barbican Center, London<br>
+							&bull; panel & talk - "So how is that working for you?, Goldsmiths University, London<br>
 							&bull; panel & talk - <a id=show target="_blank" href="https://lumenprize.com/event/artists-in-the-machine-alexander-mordvintsev/"> Lumen Art Projects: Artists in the Machine (in conversation with Alexander Mordvintsev, creator of Google Deep Dream)</a>, Event Two (50th anniversary of the landmark Computer Arts Society), Royal College of Art, London.<br>
 							&bull; talk - <a id=show target="_blank" href="http://www.ada-arte.com/en/event-details/arte-e-inteligencia-artificial/"> Espacio Fundación Telefónica</a>, Madrid, Italy. <a id=show target="_blank" href="https://www.youtube.com/watch?v=1VuBBwuyHX8  ">Watch here</a><br>
 							&bull; panel & talk - <a id=show target="_blank" href="http://art-ai.dmu.ac.uk/event/keynote-jake-elwes-creative-dilemmas/">ART•AI Festival</a>, Leicester, UK<br>
