--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -85,7 +85,7 @@
 							<h3 class="border-top">Machine learning porn</h3>
 							<p class="project-desc">2016, digital video, 12 minute loop</p>
 							<p>
-							Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>.<br>A convolutional neural network, an AI, was trained using Yahoo’s explicit content model for identifying pornography, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
+							Inspiration from <a id="show" href="http://gabgoh.github.io">Gabriel Goh</a>.<br>A convolutional neural network was trained using Yahoo’s explicit content model for identifying pornography, which learnt by being fed a database of thousands of graphic images. The neural network was then re-engineered to generate pornography from scratch.
 <br>Machine Learning Porn is a 12 minute looped film that records the AI’s pornographic fantasies.
 						</p>
 						</div><!-- // .box-info -->
