--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -88,24 +88,24 @@
 							<p>
 
 
-								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image.<br><br>
+								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI Chinese whispers.<br><br>
 
-							“The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br><br>
 
-							Closed Loop has had no textual or visual input by the artist. <br><br>
+							Closed Loop has had no textual or visual input by the artist  <br><br>
 
 							<h3 class="border-top">Technical</h3>
 							<small>Two neural networks: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.
-							Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.</small>
+							Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.<br>
 							<br>
 					<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
 					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
 					The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” -->
 
 <!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
+“The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br>
 
 
-								<small><br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>, and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a>, and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
 
 </p>
 						</div><!-- // .box-info -->
@@ -150,11 +150,11 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 
 				<br></br>
 				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
-				<img src="images/project-closedLoop/IMG_0852.jpg" alt="Jake Elwes digital artist" />
-				<small>Installation shot of Closed Loop shown as two back projected suspended screens, Slade Degree Show 2017</small>
-				<img src="images/project-closedLoop/naturemorte-5510-w1200-h800.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-closedLoop/CLoop-1.jpg" alt="Jake Elwes digital artist" />
+				<small>Installation shot of Closed Loop 2017 - projection on two hanging perspex panels</small>
+				<!-- <img src="images/project-closedLoop/naturemorte-5510-w1200-h800.jpg" alt="Jake Elwes digital artist" />
 				<small>Installation shot of Closed Loop shown as two projections, <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> 'Gradient Descent', Nature Morte</a>, Delhi 2018</small>
-				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" /> -->
 
 				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
 
