--- a/project-cusp.html
+++ b/project-cusp.html
@@ -100,8 +100,7 @@
 
 
 
-								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.</small><br><br>
-								<a id=show target="_blank" href="https://vimeo.com/351045765">Watch on Vimeo - live audio visual performance, collaboration with Cameron Thomas, Zabludowicz 2019</a>
+								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.<br>
 
 
 						</div><!-- // .box-info -->
@@ -185,6 +184,10 @@
 													<h1>Special thanks:</h1>
 													The machine learning community, in particular at Nvidia and Deepmind.<br>
 													Maitreyi Maheshwari and the team at Zabludowicz Collection.<br>
+
+													<a id=show target="_blank" href="https://vimeo.com/351045765"><img src="images/project-cusp/live.png" style="width:10%; " alt="CUSP 2019 - Jake Elwes digital artist" /><br> Watch on Vimeo - live audio visual performance collaboration with Cameron Thomas</a><br>
+													<a id=show target="_blank" href="https://cdn.zabludowiczcollection.com/files/FINAL_ZC_Invites-Leaftlet_Jake-Elwes_Digital.pdf?mtime=20190325101231"><img src="images/project-cusp/in.png" style="width:10%; " alt="CUSP 2019 - Jake Elwes digital artist" /><br>Interview with Jake Elwes and Curator Maitreyi Maheshwari</a>
+
 					</small>
 				</div>
 
