--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -88,7 +88,7 @@
 							<p>
 
 
-								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI Chinese whispers.<br><br>
+								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse".<br><br>
 
 
 							Closed Loop has had no textual or visual input by the artist  <br><br>
