--- a/news.html
+++ b/news.html
@@ -149,6 +149,34 @@
               Jake is joining <a id=show href="project-DaDaTa.html">the Artist Development Agency</a>.
             </p> -->
 
+
+						<!-- China, Leicester Video, ZKM video -->
+
+
+						<!-- <blockquote>
+							<p class="quote" style="margin-top:0px;">China</p>
+							<footer>June 2019</footer>
+						</blockquote>
+						<img src="images/news/Madrid1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid2.jpg" width="48%" alt="Jake Elwes digital artist" />
+
+						<p>
+							I was invited to give a talk about the fie.........
+						</p>
+
+						<blockquote>
+							<p class="quote" style="margin-top:0px;">Leicester</p>
+							<footer>June 2019</footer>
+						</blockquote>
+						<img src="images/news/Madrid1.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<img src="images/news/Madrid2.jpg" width="48%" alt="Jake Elwes digital artist" />
+
+						<p>
+							I was invited to give a talk about the fie.........
+						</p> -->
+
+
+
 						<blockquote>
 							<p class="quote" style="margin-top:0px;">Fundación Telefónica | Madrid</p>
 							<footer>June 2019</footer>
@@ -200,6 +228,9 @@
 							<br>
 							<br>
 							I was also invited to give a talk as part of the Open Conference Kunst und Künstliche Intelligenz (Open Codes exhibition program).
+							<br>
+							<br>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/4_tLqkXKhE0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							<br>
 							<br>
 							“The invited scientists and developers will deal with the technical aspects of automated methods of creativity, cognition and problem solving. Practical experiences with new technologies will be exchanged in the context of a workshop. The speakers will present their projects and talk about production pragmatics and their reflections on working with AI. The program will be rounded off by audiovisual performances produced with machine learning tools.
